--- a/my-redux-app-backend/frontend/.env
+++ b/my-redux-app-backend/frontend/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID=221067769494-o17d4e7fan0s6qv5dmavf40120v78ibr.apps.googleusercontent.com
-REACT_APP_API_ADDRESS=https://sltseatreservation-ejhrgeaffmgzhxb8.eastus2-01.azurewebsites.net/
+REACT_APP_API_ADDRESS=https://sltseatreservation.azurewebsites.net/
